<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_general">
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_name"
            app:singleLine="true"
            app:summary="@string/settings_picture_name_sum"
            app:title="@string/settings_picture_name" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="settings_picture_replace"
            app:singleLine="true"
            app:summary="@string/settings_picture_replace_sum"
            app:title="@string/settings_picture_replace" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="settings_picture_outline"
            app:singleLine="true"
            app:summary="@string/settings_picture_outline_sum"
            app:title="@string/settings_picture_outline" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_picture_control">
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_resize"
            app:singleLine="true"
            app:summary="@string/settings_picture_resize_sum"
            app:title="@string/settings_picture_resize" />
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_position"
            app:singleLine="true"
            app:summary="@string/settings_picture_position_sum"
            app:title="@string/settings_picture_position" />
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_degree"
            app:singleLine="true"
            app:summary="@string/settings_picture_degree_sum"
            app:title="@string/settings_picture_degree" />
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_alpha"
            app:singleLine="true"
            app:summary="@string/settings_picture_alpha_sum"
            app:title="@string/settings_picture_alpha" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="settings_picture_copy_category"
        app:title="@string/settings_picture_copy_category">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="settings_allow_picture_over_layout"
            app:persistent="false"
            app:singleLine="true"
            app:summary="@string/settings_allow_picture_over_layout_sum"
            app:title="@string/settings_allow_picture_over_layout" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="settings_picture_save_as_copy"
            app:singleLine="true"
            app:summary="@string/settings_picture_save_as_copy_sum"
            app:title="@string/settings_picture_save_as_copy" />
    </PreferenceCategory>
</PreferenceScreen>
