<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_dialog_set_resize"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp">

    <!-- X Axis Control -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textview_set_size_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/settings_picture_resize_width_x"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekbar_set_size_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:max="1000"
            android:splitTrack="true" />

        <EditText
            android:id="@+id/edittext_set_size_x"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <!-- Y Axis Control -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_set_size_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/settings_picture_resize_height_y"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekbar_set_size_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:max="1000"
            android:splitTrack="true" />

        <EditText
            android:id="@+id/edittext_set_size_y"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>
    
    <CheckBox
        android:id="@+id/checkbox_lock_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_picture_resize_lock_ratio"
        android:checked="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_picture_resize_pixels"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/settings_picture_resize_pixels_hint"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_picture_resize_pixel_width" />

        <Button
            android:id="@+id/button_pixel_width_minus"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="−" />

        <EditText
            android:id="@+id/edittext_pixel_width"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/button_pixel_width_plus"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_picture_resize_pixel_height" />

        <Button
            android:id="@+id/button_pixel_height_minus"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="−" />

        <EditText
            android:id="@+id/edittext_pixel_height"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/button_pixel_height_plus"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="+" />
    </LinearLayout>

</LinearLayout>
