<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_outline_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"
        android:paddingBottom="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_picture_outline_hint"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/outline_preview_height"
            android:layout_marginTop="12dp"
            android:background="#D0D0D0">

            <ImageView
                android:id="@+id/image_outline_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/adapter_image_description"
                android:scaleType="fitCenter" />

            <ProgressBar
                android:id="@+id/progress_outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/settings_picture_outline_color" />

        <Spinner
            android:id="@+id/spinner_outline_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/settings_picture_outline_colors" />

        <CheckBox
            android:id="@+id/check_outline_gray_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/settings_picture_outline_keep_gray_background" />

        <TextView
            android:id="@+id/text_outline_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <SeekBar
            android:id="@+id/seek_outline_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="7" />

        <TextView
            android:id="@+id/text_outline_contrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/seek_outline_contrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="65" />

    </LinearLayout>

</ScrollView>
